<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:id="@+id/profile_user"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/signin_txt"
        android:src="@drawable/starbucks_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:srcCompat="@drawable/starbucks_logo" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/signup_txt"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/profile_user"
        app:layout_constraintStart_toStartOf="@+id/profile_user"
        app:layout_constraintTop_toBottomOf="@+id/profile_user" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/motto_txt"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/textView"
        app:layout_constraintStart_toStartOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/textView" />

    <EditText
        android:id="@+id/ed_register_name"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/nama_txt"
        android:background="@drawable/inputbox"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/nama_txt"
        android:inputType="textPersonName"
        android:padding="10dp"
        android:textAlignment="gravity"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/textView2"
        app:layout_constraintStart_toStartOf="@+id/textView2"
        app:layout_constraintTop_toBottomOf="@+id/textView2" />

    <com.example.submissionintermediate.CustomView.EmailEditText
        android:id="@+id/ed_register_email"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/email_txt"
        android:background="@drawable/inputbox"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/email_txt"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="gravity"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/ed_register_name"
        app:layout_constraintStart_toStartOf="@+id/ed_register_name"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_name" />

    <com.example.submissionintermediate.CustomView.RegisterPasswordEditText
        android:id="@+id/ed_register_password"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/password_txt"
        android:background="@drawable/inputbox"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/password_txt"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="gravity"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/ed_register_email"
        app:layout_constraintStart_toStartOf="@+id/ed_register_email"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_email" />

    <Button
        android:id="@+id/buttonRegister"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:backgroundTint="@color/green_starbucks"
        android:fontFamily="@font/inter_bold"
        android:lineSpacingExtra="3sp"
        android:text="@string/register_txt"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/ed_register_password"
        app:layout_constraintStart_toStartOf="@+id/ed_register_password"
        app:layout_constraintTop_toBottomOf="@+id/ed_register_password" />

    <TextView
        android:id="@+id/loginTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/login_here_txt"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonRegister"
        app:layout_constraintStart_toStartOf="@+id/buttonRegister"
        app:layout_constraintTop_toBottomOf="@+id/buttonRegister" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="?android:attr/progressBarStyle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>