<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity">

    <ImageView
        android:id="@+id/profile_user"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:layout_marginTop="80dp"
        android:background="@drawable/circle"
        android:contentDescription="@string/signin_txt"
        android:src="@drawable/starbucks_logo"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/signIn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/signin_txt"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="@+id/profile_user"
        app:layout_constraintStart_toStartOf="@+id/profile_user"
        app:layout_constraintTop_toBottomOf="@+id/profile_user" />

    <TextView
        android:id="@+id/motto"
        android:layout_width="320dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:fontFamily="@font/inter_medium"
        android:text="@string/motto_txt"
        android:textAlignment="center"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/signIn"
        app:layout_constraintStart_toStartOf="@+id/signIn"
        app:layout_constraintTop_toBottomOf="@+id/signIn" />

    <com.example.submissionintermediate.CustomView.EmailEditText
        android:id="@+id/emailUser"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="20dp"
        android:autofillHints="@string/email_txt"
        android:background="@drawable/inputbox"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/email_txt"
        android:inputType="textEmailAddress"
        android:padding="10dp"
        android:textAlignment="gravity"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/motto"
        app:layout_constraintStart_toStartOf="@+id/motto"
        app:layout_constraintTop_toBottomOf="@+id/motto" />

    <com.example.submissionintermediate.CustomView.LoginPasswordEditText
        android:id="@+id/passwordUser"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:autofillHints="@string/password_txt"
        android:background="@drawable/inputbox"
        android:ems="10"
        android:gravity="center_vertical"
        android:hint="@string/password_txt"
        android:inputType="textPassword"
        android:padding="10dp"
        android:textAlignment="gravity"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/emailUser"
        app:layout_constraintStart_toStartOf="@+id/emailUser"
        app:layout_constraintTop_toBottomOf="@+id/emailUser" />

    <Button
        android:id="@+id/buttonLogin"
        android:layout_width="320dp"
        android:layout_height="50dp"
        android:layout_marginTop="15dp"
        android:background="@drawable/button"
        android:fontFamily="@font/inter_bold"
        android:lineSpacingExtra="3sp"
        android:text="@string/login_txt"
        android:textColor="@color/white"
        android:textSize="16sp"
        app:layout_constraintEnd_toEndOf="@+id/passwordUser"
        app:layout_constraintStart_toStartOf="@+id/passwordUser"
        app:layout_constraintTop_toBottomOf="@+id/passwordUser" />

    <TextView
        android:id="@+id/registerTxt"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/inter_bold"
        android:text="@string/create_new_member_txt"
        android:textAllCaps="true"
        android:textSize="12sp"
        app:layout_constraintEnd_toEndOf="@+id/buttonLogin"
        app:layout_constraintStart_toStartOf="@+id/buttonLogin"
        app:layout_constraintTop_toBottomOf="@+id/buttonLogin" />

        <ProgressBar
            android:id="@+id/progressBar"
            android:visibility="gone"
            style="?android:attr/progressBarStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>